# MobileBlox-V3

./: README.md  gradle.properties  gradlew  gradlew.bat  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  LuaUI.hpp  globals.hpp  native-lib.cpp
app/src/main/cpp/memory/: mem.hpp
app/src/main/java/com/mobileblox/: MainActivity.java
app/src/main/res/values/: string.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mobileblox/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
